--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -82,10 +82,23 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 enable_rule_generator=true
 overwrite_original_rules=true
-[template]
-clash.dns=1
 
 clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
 singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
+
+[template]
+;The file scope limit of 'include' statement inside the templates.
+template_path=
+
+;The following settings will be added to the "global" scope of the template variables
+;Value of 'clash.http_port' can be accessed with 'global.clash.http_port' in the template.
+clash.http_port=7891
+clash.socks_port=7892
+clash.allow_lan=true
+clash.log_level=info
+clash.external_controller=127.0.0.1:9090
+singbox.allow_lan=true
+singbox.mixed_port=2080
+clash.dns=1
 
 ;luck
