--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -80,6 +80,9 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
+
+clash_rule_base=https://raw.githubusercontent.com/BlueDolphin9527/Clash_DIY_Rules/main/clash_rule_base.yml
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
