--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -85,7 +85,7 @@ clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/al
 ;singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
 enable_rule_generator=true
 overwrite_original_rules=true
-
+clash.dns=1
 
 
 
