--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -86,7 +86,7 @@ clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/al
 enable_rule_generator=true
 overwrite_original_rules=true
 clash.dns=1
-
+clash.new_field_name=ture
 
 
 ;luck
