--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -87,6 +87,6 @@ enable_rule_generator=true
 overwrite_original_rules=true
 clash.dns=1
 clash.new_field_name=ture
-
+clash.log_level=debug
 
 ;luck
