--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -85,8 +85,8 @@ clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/al
 ;singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
 enable_rule_generator=true
 overwrite_original_rules=true
-clash.dns=1
-clash.new_field_name=ture
+clash.dns="true"
+clash.new_field_name=1
 clash.log_level=debug
 
 ;luck
