--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -83,10 +83,7 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 clash.dns=true
 clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
 ;singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
-enable_rule_generator=true
-overwrite_original_rules=true
-clash.dns="true"
-clash.log_level=debug
-local.clash.log_level=de11
+local.clash.new_field_name=1
+clash.new_field_name=1
 
 ;luck
