--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -82,7 +82,7 @@ custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Me
 
 clash.log_level=debug
 clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
-;singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
+singbox_rule_base=https://github.com/Toperlock/sing-box-subscribe/raw/refs/heads/main/config_template/sb-config-1.11.json
 
 
 ;luck
