--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -80,7 +80,9 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
-clash.log_level=debug
+enable_rule_generator=true
+overwrite_original_rules=true
+
 clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
 singbox_rule_base=https://github.com/o88369/sing-box-subscribe/raw/refs/heads/main/config_template/sub-cm.json
 
