--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -50,8 +50,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`!!GROUPID=0
 custom_proxy_group=♻️ 自动选择`url-test`!!GROUPID=2`http://www.goole.com/generate_204`300,,50
-custom_proxy_group=中间`select`[]流量无限`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]http://www.goole.com/generate_204`300,,50
-custom_proxy_group=无限流量`url-test`[]ub0`[]ub1`[]ub2`!!GROUPID=2`[]http://www.goole.com/generate_204`300,,50
+custom_proxy_group=中间`select`[]流量无限`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`http://www.goole.com/generate_204`300,,50
+custom_proxy_group=无限流量`url-test`[]ub0`[]ub1`[]ub2`!!GROUPID=2`http://www.goole.com/generate_204`300,,51
 custom_proxy_group=tiktok`select`[]流量无限`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=github`select`[]DIRECT`[]流量无限`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
