--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -87,6 +87,6 @@ custom_proxy_group=ub2`select`[]REJECT`!!GROUPID=2
 
 enable_rule_generator=true
 ;overwrite_original_rules=true
-clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
-singbox_rule_base=https://github.com/o88369/sing-box-subscribe/raw/refs/heads/main/config_template/sub-cm.json
+clash_rule_base=https://github.com/o88369/ooo1/raw/refs/heads/main/clash.yaml
+singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/singbox.json
 ;luck
