--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -80,13 +80,13 @@ custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://1.1.1.1/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://1.1.1.1/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=ub0`select`[]REJECT`!!GROUPID=1
-custom_proxy_group=ub1`select`[]REJECT`!!GROUPID=2
-custom_proxy_group=ub2`select`[]REJECT`!!GROUPID=3
+custom_proxy_group=ub0`select`[]REJECT`!!GROUPID=2
+custom_proxy_group=ub1`select`[]REJECT`!!GROUPID=3
+custom_proxy_group=ub2`select`[]REJECT`!!GROUPID=4
 ;设置分组标志位
 
 enable_rule_generator=true
 ;overwrite_original_rules=true
-clash_rule_base=https://github.com/o88369/ooo1/raw/refs/heads/main/clash.yaml
-singbox_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/singbox.json
+clash_rule_base=https://raw.githubusercontent.com/o88369/ooo1/refs/heads/main/all_base.tpl
+singbox_rule_base=https://github.com/o88369/sing-box-subscribe/raw/refs/heads/main/config_template/sub-cm.json
 ;luck
