--- a/ACL4SSR_Online_Full1.ini
+++ b/ACL4SSR_Online_Full1.ini
@@ -81,14 +81,14 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 
-custom_proxy_group=DIRECT`direct
+custom_proxy_group=gou`direct
 custom_proxy_group=ub0`select`!!GROUPID=0
 custom_proxy_group=ub1`select`!!GROUPID=1
 custom_proxy_group=ub2`select`!!GROUPID=2
 ;设置分组标志位
 
-enable_rule_generator=true
-;overwrite_original_rules=true
+enable_rule_generator=false
+overwrite_original_rules=false
 clash_rule_base=https://github.com/o88369/ooo1/raw/refs/heads/main/clash.yaml
 singbox_rule_base=https://github.com/o88369/ooo1/raw/refs/heads/main/singbox.json
 ;luck
